adds fine tuning to css

--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div id="links">
-                        <a href="index.html">About</a> /
-                        <a href="portfolio.html">Portfolio</a> /
+                        <a href="index.html">About</a> |
+                        <a href="portfolio.html">Portfolio</a> |
                         <a href="contact.html">Contact</a>
                     </div>
                 </div>
