--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <title>Craig Dupuis' Bootstrap Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -30,35 +30,56 @@
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div id="about">
                         <h2>Portfolio</h2>
+                        <hr>
                         <div>
-                            <img src="images/Program-Code-Feature-Image.jpg" alt="code screen" width="50%">
+                            <a href="https://github.com/CraigD89" target="_blank">
+
+                                <img src="assets/images/Program-Code-Feature-Image.jpg" alt="code screen" width="50%">
+                                <div class="text-block">
+                                    <p>Web Development</p>
+                                </div>
+                            </a>
+
                         </div>
 
                         <div>
-                            <img src="images/canon_8035b106_eos_6d_dslr_camera_1110376.jpg" alt="photography" width="50%">
+                            <a href="http://craigdupuis.com" target="_blank">
+                                <img src="assets/images/canon_8035b106_eos_6d_dslr_camera_1110376.jpg" alt="photography" width="50%">
+                                <div class="text-block">
+                                    <p>Photography</p>
+                                </div>
+                            </a>
+
                         </div>
 
                         <div>
-                            <img src="images/AUSTIN+SCHOOL+OF+FASHION+DESIGN-ASFD-Austin+Fashion+School-Garment+Construction-sewing-sewing+supplies-fashion+design+school-fashion+design+supplies-sewing+machine-body+forms.jpg"
+                            <img src="assets/images/AUSTIN+SCHOOL+OF+FASHION+DESIGN-ASFD-Austin+Fashion+School-Garment+Construction-sewing-sewing+supplies-fashion+design+school-fashion+design+supplies-sewing+machine-body+forms.jpg"
                                 alt="design" width="50%">
+                            <div class="text-block">
+                                <p>Design</p>
+                            </div>
                         </div>
 
                         <div>
-                            <img src="images/jpg_Nebelung_c_Giuseppe_Mazza.jpg" alt="cat" width="50%">
+                            <img src="assets/images/jpg_Nebelung_c_Giuseppe_Mazza.jpg" alt="cat" width="50%">
+                            <div class="text-block">
+                                <p>Pets</p>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div id="connect">
                         <h2>Connect with Me</h2>
+                        <hr>
                         <a href="https://github.com/CraigD89" target="_blank">
-                            <img src="images/if_github_square_black_107109.png" alt="GitHub" width="25%">
+                            <img src="assets/images/if_github_square_black_107109.png" alt="GitHub" width="25%">
                         </a>
                         <a href="https://www.linkedin.com/in/craigdupuis/" target="_blank">
-                            <img src="images/if_linkedin_square_color_107091.png" alt="LinkedIn" width="25%">
+                            <img src="assets/images/if_linkedin_square_color_107091.png" alt="LinkedIn" width="25%">
                         </a>
                         <a href="https://stackoverflow.com/users/8942114/craig-dupuis" target="_blank">
-                            <img src="images/if_stackoverflow_273179.png" alt="StackOverflow" width="25%">
+                            <img src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow" width="25%">
                         </a>
                     </div>
                 </div>
@@ -67,8 +88,7 @@
 
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <div id="footer">
-                        &copy Copyright 2018 Craig Dupuis
+                    <div class="panel-footer footer">&copy Copyright 2018 Craig Dupuis
                     </div>
                 </div>
             </div>
